  each backend.
* Implement IPv6 only networks.
* Implement 'resize' server action.

  * Implement the 'resize' server action, to change the flavor of a server.
  Only 'cpu' and 'memory' resizing is supported.

* Compute quotas for CPU and memory of running vms.
* Obsolete PUBLIC_USE_POOL setting, since Cyclades manages IP pool for all
  type of networks.

Pithos
------

* Refactor metadata schema (table attributes) in Pithos DB to speedup current
objects by domain attribute. This is used by Plankton for listing VM images.

* Enforce container-level atomicity in (most) Pithos API calls.


v0.14.4
=======

Released: Mon Jul 29 12:24:22 EEST 2013

Pithos
------

* Fix bug in reconcile resources management command.


.. _Changelog-0.14.3:

v0.14.3
=======

Released: Thu Jul 25 12:22:47 EEST 2013

Synnefo-wide
------------

* Use the SYNNEFO_TRACE environmental variable to control whether the greenlet
  tracing code will get loaded or not.
* Split the HIDDEN_COOKIES setting in HIDDEN_HEADERS and HIDDEN_COOKIES, and
  add the MAIL_MAX_LEN setting, to limit the mail size for unhandled
  exceptions.


.. _Changelog-0.14.2:

Released: Fri Jul 12 13:13:32 EEST 2013

v0.14.2
=======

Cyclades
--------

* Add new setting PITHOS_BACKEND_POOL_SIZE, which configures the size
  of the pool of Pithos backends that are used by plankton.


.. _Changelog-0.14:

v0.14
=====

Released: Tue Jun 25 14:01:19 EEST 2013

Synnefo-wide
------------

* Create 'snf_django' Python package to hold common code for all Synnefo
  components.

* Create a JSON-exportable definition document for each Synnefo Components
  (Astakos, Cyclades, Pithos, etc.) that consolidates APIs (services),
  resources, and other standardized properties (e.g. default URL prefixes).

* Standardize URLs for Synnefo Components, impose structure and naming
  conventions to related settings. Make each component deployable under
  a user-configurable <COMPONENT>_BASE_URL. Each API (compute, image, etc.)