@@ -107,3 +107,8 @@
 
 # Tune the size of the http connection pool to astakos.
 #CYCLADES_ASTAKOSCLIENT_POOLSIZE = 50
+#
+## Template to use to build the FQDN of VMs. The setting will be formated with
+## the id of the VM. If set to 'None' the first public IPv4 or IPv6 address
+## of the VM will be used.
+#CYCLADES_SERVERS_FQDN = 'snf-%(id)s.vm.example.synnefo.org'
